BUG: works on mobile

--- a/be/proj/static/css/base.scss
+++ b/be/proj/static/css/base.scss
@@ -129,6 +129,7 @@ body {
     background-color: $off-grey;
     line-height: 1.6em;
     @extend %mono;
+    font-size: 16px;
 }
 
 #scrollthing {
@@ -159,6 +160,7 @@ body {
     bottom: 10%;
     text-transform: uppercase;
     width: 100%;
+    z-index: 1000;
   }
 
   .splash-footer {
@@ -324,7 +326,6 @@ $banner-height: 32px;
     color: #feffe8;
   }
 
-
   font-family: "Cutive mono";
   opacity: 0;
   position: fixed;
@@ -428,7 +429,6 @@ h2 {
     vertical-align: top;
   }
 }
-
 aside {
   width: 33%;
   margin-left: 3%;
@@ -445,6 +445,9 @@ aside {
   }
 }
 
+div {
+  max-width: 100%;
+}
 
 /** HEADER **/
 
@@ -775,6 +778,7 @@ label {
 
 .lendyour {
   text-align: center;
+
   p {
     text-align: center;
   }
