--- a/be/proj/static/css/responsive.scss
+++ b/be/proj/static/css/responsive.scss
@@ -29,6 +29,7 @@
 @media only screen and (max-device-width: 768px) {
   .body-text {
     width: 473px;
+    max-width: 100%;
   }
 
   .social-media {
@@ -36,12 +37,22 @@
   }
 }
 
-@media (max-device-width: 480px) {
+@media only screen and (max-width: 600px) {
   .wrapper {
     max-width: 100%;
   }
+  .hide-mobile {
+    display: none;
+  }
+  .header-links {
+    height: initial;
+  }
+  .banner a {
+    font-size: 8px;
+  }
   .body-text {
     margin: 6px;
+    width: 100%;
   }
   .social-media {
     opacity: 0 !important;
